--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Dropcaps is a WordPress plugin that creates a dropcap for each WordPress post. Dropcaps makes the first letter of the content bigger and larger than the rest of the article, sometimes dropping down as far as two or more lines. Dropcaps is released under GPLv3. It's compatible with the latest WordPress version 3.3.1.
+Dropcaps is a WordPress plugin that creates a dropcap for each post or page. Dropcaps is a feature that makes the first letter of the post/page bigger and larger than the rest of the content. The first letter drops down two or more lines. The plugin is released under GPLv3, and is compatible with the latest WordPress version 3.3.1.
