just fixed this broken plugin. now using wp_enqueue_style and modified dropcaps.css.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Dropcaps is a WordPress plugin that creates a dropcap for each post or page. Dropcaps is a feature that makes the first letter of the post/page bigger and larger than the rest of the content. The first letter drops down two or more lines. The plugin is released under GPLv3, and is compatible with the latest WordPress version 3.
+Dropcaps is a WordPress plugin that creates a dropcap for each post or page. Dropcaps is a feature that makes the first letter of the post/page bigger and larger than the rest of the content. Essentially, the first letter of the post or article drops down to two or more lines. You can modify the stylesheet called dropcaps.css if you want to change fonts, colors, size, etc. The plugin is released under GPLv3, and is compatible with the latest WordPress version 3.
